# ManyDice

./: .gitignore  ManyDice.cabal  README.md
Language/ManyDice/: Parser.hs  Tokenizer.hs
