name:           ManyDice
category:       Compilers/Interpreters
version:        0.0.1
cabal-version:  >= 1.10
author:         Paul Drees
maintainer:     Paul Drees <zemyla@gmail.com>
stability:      experimental
homepage:       http://github.com/Zemyla/ManyDice
bug-reports:    http://github.com/Zemyla/ManyDice/issues
copyright:      Copyright (C) 2015 Paul Drees
synopsis:       A clone of AnyDice with enhanced features.
description:    ManyDice is a clone of the <http://anydice.com/ AnyDice> language in Haskell.

Library
    build-depends:  base >= 4.8 && < 5,
                    containers >= 0.5 && < 0.6,
                    vector >= 0.10 && < 0.12,
                    text >= 1.0 && < 1.3,
                    parsec > 3 && < 3.2,
                    hashable >= 1.1 && < 1.3


